--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,32 @@
+# localhost ????
+server.port=8088
+
+# MySQL? ??
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/sekkison?useSSL=false&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
+spring.datasource.username=sekkison
+spring.datasource.password=12341234
+
+# SQL ?? ??
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# ?? ? ??? ???(create) ?? ????(update)
+spring.jpa.hibernate.ddl-auto=create
+
+# (????)?
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.html
+
+#??? ?? ?? ??
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=20MB
+
+#??? ??
+app.upload.path=upload
+
+
+
+
+
 
