--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.mvc.view.suffix=.html
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=20MB
 
-file.upload-dir=src/main/upload
+file.upload-dir=upload
 
 #??? ??
 app.upload.path=upload
